fix glossario che non compilava ed era indentato sbagliato

--- a/doc/Esterni/Glossario/terminiGlossario.tex
+++ b/doc/Esterni/Glossario/terminiGlossario.tex
@@ -1,30 +1,30 @@
 \section A
-\begin{itemize}
+\begin{description}
 \item[Angular.js] Framework web open source con l'obiettivo di semplificare lo sviluppo e il test di applicazioni singola pagina fornendo un framework lato client con architettura Model-View-Controller(MVC) e Model-view-viewmodel (MVVM).
 \item[API] Insieme di procedure disponibili al programmatore, solitamente raggruppate a formare un insieme di strumenti specifici per lo svogliemento di un determinato compito all'interno di un certo programma.
 \item[applicazione web] Applicazione accessibile via browser.
 \item[Asana] Servizio web utilizzato per coordinare le attività di project management.
 \item[Astah] Strumento software sviluppato da Change Vision per la modellazione UML. Offre diverse funzionalità fra cui la possibilità di creare diagrammi delle classi, diagrammi dei casi d’uso, diagrammi delle attività, diagrammi di sequenza e diagrammi dei componenti.
 \item[AWS] Acronimo per Amazon Web Services è una piattaforma di servizi cloud in grado di offrire potenza di elaborazione, storage di database, distribuzione dei contenuti e altre funzionalità a supporto del dimensionamento e della crescita delle attività aziendali.
-\end{itemize}
+\end{description}
 \section B
-\begin{itemize}
+\begin{description}
 \item[backup] Replicazione di materiale informativo archiviato nella memoria di massa dei computer, al fine di prevenire la perdita definitiva dei dati in caso di eventi malevoli accidentali o intenzionali.
 \item[baseline] Nel contesto dell'Ingegneria del Software, ed in particolare del ciclo di vita di un particolare progetto, punto d'arrivo tecnico dal quale non si retrocede.
 \item[Bitbucket] Servizio di hosting web-based per progetti che usano i sistemi di versioamento Mercurial o Git.
 \item[Bootstrap] Raccolta di strumenti liberi per la creazione di siti e applicazioni per il Web. Essa contiene modelli di progettazione basati su HTML e CSS, sia per la tipografia, che per le varie componenti dell'interfaccia, come moduli, pulsanti e navigazione, così come alcune estensioni opzionali di JavaScript.
 \item[branch] All'interno di un repository, insieme di versioni in evoluzione.
-\end{itemize}
+\end{description}
 \section C
-\begin{itemize}
+\begin{description}
 \item[caso d'uso] Insieme di scenari, di cui uno principale e più alternativi, che hanno in comune il raggiungimento di uno specifico obiettivo da parte dell'utente di un programma software; è una tecnica usata nei processi di ingegneria del software per effettuare in maniera esaustiva e non ambigua, la raccolta dei requisiti.
 \item[ciclo di vita (di un prodotto)] L'insieme degli stati che un prodotto software assume, dal concepimento al ritiro delle transizioni fra tali stati (ovvero quelle attività svolte sul prodotto che servono a farlo avanzare nel grado di maturazione).
 \item[client] Componente hardware e/o software che richiede servizi o risorse a un server.
 \item[CSS] Acronimo per Cascading Style Sheets, in italiano "fogli di stile a cascata". Indica un linguaggio usato per definire la formattazione di documenti HTML, XHTML e XML, come ad esempio siti web e relative pagine web.
 \item[CSS3] Versione 3 di CSS, che aumenta il supporto per animazioni ed elementi interattivi.
-\end{itemize}
+\end{description}
 \section D
-\begin{itemize}
+\begin{description}
 \item[design pattern] Soluzione progettuale generale ad un problema ricorrente. Si tratta di una descrizione o modello logico da applicare per la risoluzione di un problema che può presentarsi in diverse situazioni durante le fasi di progettazione e sviluppo del software.
 \item[diagramma delle attività] Diagramma UML che descrive il flusso di attività di una procedura (metodo o funzione), tramite i concetti di scelta, iterazione e concorrenza.
 \item[diagramma dei casi d'uso] Grafo orientato in cui ogni nodo rappresenta un attore o un caso d'uso; ogni arco può essere una comunicazione tra un attore e un caso d'uso oppure una relazione (di estensione, inclusione o generalizzazione) tra due casi d'uso o tra due attori.
@@ -34,63 +34,63 @@
 \item[diagramma WBS] Diagramma che decompone in modo gerarchico le attività di un progetto in sotto-attività (coese ma non necessariamente sequenziali): Work Breakdown Structure.
 \item[Django] Framework web open source per lo sviluppo di applicazioni web, scritto in linguaggio Python, seguendo il pattern Model-View-Controller.
 \item[DRI] Acronimo per Directly Responsible Individual, è un modello di lavoro adottato inizialmente da Apple e successivamente da Asana che consiste nell'identificare un singolo responsabile per ogni attività assegnabile. Il team decide di seguire questo modello. La motivazione principale risiede in questa frase: "When nobody knows who’s doing what, and when someone doesn’t feel ultimately responsible for driving work forward, the work may not happen at all." Riferimento: https://blog.asana.com/2015/06/why-one-assignee/ 
-\end{itemize}
+\end{description}
 \section E
-\begin{itemize}
+\begin{description}
 \item[editor] Programma di revisione o redazione informatica che consente di utilizzare, verificare o riorganizzare altri programmi o codici senza dover intervenire direttamente su questi.
-\end{itemize}
+\end{description}
 \section F
-\begin{itemize}
+\begin{description}
 \item[framework]  La struttura operativa nella quale viene elaborato un dato software; un framework, in generale, include software di supporto, librerie, un linguaggio per gli script e altre componenti applicative che possono aiutare a realizzare le varie componenti di un progetto.
-\end{itemize}
+\end{description}
 \section G
-\begin{itemize}
+\begin{description}
 \item[getter] Metodo pubblico utilizzato per accedere in lettura al valore di un membro privato di una classe, che non sarebbe accessibile direttamente.
 \item[Git] Sistema di controllo di versione che serve a tracciare i cambiamenti in un repository.
 \item[GitHub] Servizio web di hosting per repository, che usa il sistema di versionamento Git; può essere utilizzato anche per la condivisione e la modifica di file di testo e documenti revisionabili.
 \item[Gulpease, indice di] Indice, tarato sulla lingua italiana, che misura la qualità di un documento stimandone il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione, ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe - cosa che ne consente una implementazione automatizzata fortemente affidabile. 
-\end{itemize}
+\end{description}
 \section H
-\begin{itemize}
+\begin{description}
 \item[Hammer.js] Libreria Javascript che permette di interagire con i contenuti web tramite le azioni classiche di un touch screen.
 \item[HTML] Linguaggio di markup per la strutturazione del contenuto di una pagina web.
 \item[HTML5] Versione 5 di HTML, che spinge il linguaggio nella direzione del web semantico (con l'aggiunta di nuovi tag) e lo arricchisce di nuove funzionalità interattive.
-\end{itemize}
+\end{description}
 \section I
-\begin{itemize}
+\begin{description}
 \item[IDE]  Acronimo per Integrated Development Environment, ovvero Ambiente di Sviluppo Integrato; si riferisce ad un software che, in fase di programmazione, aiuta i programmatori nello sviluppo del codice sorgente di un programma. Spesso l'IDE aiuta lo sviluppatore segnalando errori di sintassi del codice direttamente in fase di scrittura, oltre a tutta una serie di strumenti e funzionalità di supporto alla fase di sviluppo e debugging.
 \item[infrastruttura] Tutte le risorse hardware e software (di un progetto).
 \item[Instagantt] Applicazione web per la creazione di diagrammi di Gantt.
 \item[IntelliJ Idea] IDE per il linguaggio Java.
 \item[ISO/IEC 9126:2001] Le norme ISO/IEC 9126:2001 descrivono un modello di qualità del software, definiscono le caratteristiche che la determinano e propongono metriche per la sua misurazione.
-\end{itemize}
+\end{description}
 \section J
-\begin{itemize}
+\begin{description}
 \item[Java] Linguaggio di programmazione orientato agli oggetti a tipizzazione statica, con una propria piattaforma di elaborazione, sviluppato da Sun Microsystems nel 1995.
 \item[Javadoc] Programma di utilità incluso nel SDK di Java con il quale è possibile generare in modo automatico la documentazione in formato HTML dei sorgenti di un programma Java, a patto che vengano utilizzate delle regole ben precise nella scrittura dei commenti stessi.
 \item[JavaScript] Linguaggio di scripting orientato agli oggetti e agli eventi, comunemente utilizzato per la creazione, in siti web e applicazioni web, di effetti dinamici interattivi tramite funzioni invocate da eventi innescati dall’utente sulla pagina web.
-\end{itemize}
+\end{description}
 \section L
-\begin{itemize}
+\begin{description}
 \item[Latex] Linguaggio di markup utilizzato per la produzione di documentazione tecnica e scientifica; è lo standard de facto per la comunicazione e la pubblicazione di documenti scientifici ed è disponibile come software libero.
-\end{itemize}
+\end{description}
 \section M
-\begin{itemize}
+\begin{description}
 \item[marketplace] Mercato online in cui sono raggruppate le merci di diversi venditori o siti web.
 \item[milestone] Punto nel tempo associato ad un valore strategico per un progetto.
 \item[MySQL] Software per la gestione di database relazionali.
-\end{itemize}
+\end{description}
 \section N
-\begin{itemize}
+\begin{description}
 \item[Node.js] framework javascript open-source ideato per realizzare applicazioni web scalabili. È basato su un approccio event-driven e permette di essere utilizzato non solo per applicazioni client-side, ma anche per quelle server-side attraverso il motore JavaScript V8.
 \item[nosql] un movimento che promuove sistemi software dove la persistenza dei dati è caratterizzata dal fatto di non utilizzare il modello relazionale, di solito usato dai database tradizionali. L'espressione NoSQL fa anche riferimento al linguaggio SQL, che è il più comune linguaggio di interrogazione dei dati nei database relazionali.
-\end{itemize}
+\end{description}
 \section O
-\begin{itemize}
+\begin{description}
 \item[Open Source] un software di cui i detentori dei diritti rendono pubblico il codice sorgente, favorendone il libero studio e permettendo a programmatori indipendenti di apportarvi modifiche ed estensioni. 
-\end{itemize}
+\end{description}
 \section P
-\begin{itemize}
+\begin{description}
 \item[package] Meccanismo per organizzare classi Java in gruppi logici, principalmente (ma non solo) allo scopo di definire namespace distinti per diversi contesti. Il package ha lo scopo di riunire classi (o entità analoghe, quali interfacce ed enumerazioni) logicamente correlate.
 \item[PDCA, schema] Schema iterativo di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi); noto anche come ciclo di Deming o ciclo di miglioramento continuo, viene utilizzato in attività per il controllo e il miglioramento continuo di processi e prodotti.
 \item[PDF] Acronimo per Portable Document Format, è un formato di file usato per presentare e scambiare documenti indipendentemente dal software, dall'hardware o dal sistema operativo. Ideato da Adobe, il formato PDF è diventato uno standard aperto incluso nella categoria ISO (International Organization for Standardization). I file PDF possono contenere collegamenti e pulsanti, campi modulo, audio, video e funzionalità di business logic.
@@ -98,17 +98,17 @@
 \item[PostgreSQL] Sistema di gestione di basi di dati, ad oggetti, rilasciato con licenza libera.
 \item[PragmaDB] Software per la gestione di documenti creati durante il ciclo di vita di un progetto software.
 \item[Python] Linguaggio di programmazione ad alto livello, orientato agli oggetti, usato per sviluppare applicazioni distribuite, scripting, computazione numerica e system testing.
-\end{itemize}
+\end{description}
 \section R
-\begin{itemize}
+\begin{description}
 \item[React.js] Libreria JavaScript open source per lo sviluppo di interfacce utente.
 \item[repository] Ambiente di un sistema informativo in cui vengono gestiti metadati attraverso tabelle relazionali. Il repository utilizzato dal team Hivex è fornito dalla piattaforma GitHub.
 \item[requisito di sistema] Definizione formale e dettagliata di una funzione del sistema.
 \item[requisito funzionale] Servizio che un prodotto è tenuto a fornire.
 \item[requisito non funzionale] Vincolo su uno o più servizi che un prodotto fornisce.
-\end{itemize}
+\end{description}
 \section S
-\begin{itemize}
+\begin{description}
 \item[scenario] Sequenza di passi che descrive un esempio di interazione tra l'utente e il sistema.
 \item[SCSS] Acronimo per Sassy Cascading Style Sheets; indica un soprainsieme della sintassi CSS3.
 \item[SDK] Acronimo per Software Development Kit; indica un insieme di strumenti per lo sviluppo e la documentazione di software.
@@ -122,19 +122,19 @@
 \item[stack] Porzione della memoria assegnata ad un programma dove vengono memorizzati i valori delle variabili attive nello scope di esecuzione.
 \item[stakeholder] Persona a vario titolo coinvolta nel ciclo di vita del software e che ha influenza sul prodotto o sul suo processo di sviluppo. Tale gruppo varia nella sua composizione a seconda dei diversi progetti, ma include sempre utenti/operatori e clienti (che necessariamente non sono sempre gli stessi).
 \item[statement] Il più piccolo elemento autonomo di un linguaggio di programmazione imperativo che esprime una qualche azione da eseguire.
-\end{itemize}
+\end{description}
 \section T
-\begin{itemize}
+\begin{description}
 \item[text-to-speech] Tecnica per la riproduzione artificiale della voce umana.
 \item[Tomcat] Application server nella forma di contenitore servlet open-source. Esso implementa le specifiche JavaServer Pages (JSP) e Servlet e fornisce quindi una piattaforma software per l'esecuzione di applicazioni Web sviluppate in linguaggio Java.
 \item[Travis] Servizio di integrazione continua utilizzato per testare progetti software ospitati su GitHub.
 \item[Trello] Servizio utilizzato per coordinare le attività di project management.
-\end{itemize}
+\end{description}
 \section U
-\begin{itemize}
+\begin{description}
 \item[UML] Unified Modelling Language: famiglia di notazioni grafiche che si basano su un singolo meta-modello e servono a descrivere e progettare sistemi software.
-\end{itemize}
+\end{description}
 \section W
-\begin{itemize}
+\begin{description}
 \item[W3C] Acronimo per World Wide Web Consortium, l'organizzazione che sviluppa tecnologie che garantiscono l'interoperabilità (specifiche, guideline, software e applicazioni) per portare il World Wide Web al massimo del suo potenziale agendo da forum di informazioni, comunicazioni e attività comuni. 
-\end{itemize}
+\end{description}
