sezione funzioni del prodotto parte2

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -102,10 +102,11 @@
 
 \section{Descrizione generale}
 	\subsection{Obiettivo del prodotto}
-	Il prodotto sviluppato  ha come scopo primario quello di fornire un editor in grado di regimentare e guidare l'utente nella progettazione e nella codifica dell'applicativo desiderato e generare codice eseguibile sulla base delle informazioni contenute nei diagrammi realizzati. 
-	\\In particolare, il software risulterà ottimizzato per la realizzazione di programmi appartenenti ad uno specifico dominio applicativo, quello dei giochi da tavolo.
+	Il prodotto sviluppato  ha come scopo primario quello di fornire un editor in grado di supportare e guidare l'utente nella progettazione e nella codifica dell'applicativo desiderato e generare codice eseguibile sulla base delle informazioni contenute nei diagrammi realizzati. 
+	\\In particolare, il software risulterà orientato alla realizzazione di programmi appartenenti ad uno specifico dominio applicativo, quello dei giochi da tavolo.
 	\subsection{Funzioni del prodotto}
-	Il progetto sviluppato consiste nella creazione di un applicativo web che possa permettere la creazione di svariati software di un determinato dominio applicativo (i giochi da tavolo). In dettaglio, sarà possibile:
+	%Il progetto sviluppato consiste nella creazione di un applicativo web che possa permettere la creazione di svariati software di un determinato dominio applicativo (i giochi da tavolo). 
+	In dettaglio, all'interno di \proj{}, sarà possibile:
 	\begin{itemize}
 	\item Definire un diagramma delle classi;
 	\item Definire i diagrammi di attività, con alcune modifiche rispetto allo standard, dei metodi descritti nel diagramma delle attività;
