ar, correzioni minori

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -114,13 +114,13 @@
 	\item Salvare e caricare successivamente il proprio progetto sviluppato con \proj.
 	\end{itemize}
 	\subsection{Caratteristiche degli utenti}
-	Il prodotto \proj{} si rivolge principalmente ad una categoria di utenti ben specifica, quella dei programmatori o, in generale, dei lavoratori impiegati nell'ambito informatico con una conoscenza approfondita e strutturata della programmazione.
+	Il prodotto \proj{} si rivolge principalmente ad una categoria di utenti ben specifica, quella dei programmatori o, in generale, dei lavoratori impiegati nell'ambito informatico con una conoscenza approfondita della programmazione.
 	\\In particolare è richiesto che l'utente dell'editor abbia un certo grado di familiarità con:
 		\begin{itemize}
 			\item Le principali convenzioni della modellazione \gloss{UML}, e più in specifico con i diagrammi delle classi e delle attività;
 			\item Le astrazioni e i paradigmi della programmazione orientata agli oggetti; infatti il linguaggio target di generazione del codice, i diagrammi e le funzionalità offerte suggeriscono un'architettura dell'applicativo da realizzarsi ben strutturata in moduli funzionali specifici e distinti.
 		\end{itemize} 
-	Per garantire inoltre una comprensione accurata e completa dell'insieme di funzionalità implementate il prodotto sarà corredato di un manuale utente completo delle indicazioni necessarie per poterne fruire in modo efficacie.
+	Per garantire inoltre una comprensione accurata e completa dell'insieme di funzionalità implementate il prodotto sarà corredato di un manuale utente completo delle indicazioni necessarie per poterne fruire in modo efficace.
 	\subsection{Piattaforma di esecuzione}
 	Il prodotto sviluppato risulterà fruibile da qualsiasi piattaforma desktop con operante un browser web compatibile con le tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{Javascript}. In particolare l'elenco dei browser web il cui supporto è garantito è contenuto nella sezione relativa ai requisiti di vincolo.
 \subsection{Vincoli generali}
@@ -135,8 +135,11 @@
 \newpage
 
 \section{Casi d'uso}
-All'interno di questa sezione vengono elencati i casi d'uso rilevanti per il prodotto \proj{} individuati e definiti attraverso l'analisi del capitolato d'appalto, gli incontri con il proponente e le riunioni interne al team \hx{}. 
-\\In particolare ogni
+All'interno di questa sezione sono elencati i casi d'uso rilevanti per il prodotto \proj{} individuati e definiti attraverso l'analisi del capitolato d'appalto, gli incontri con il proponente e le riunioni interne al team \hx{}. 
+\\La struttura e le convenzioni usate in ogni caso d'uso sono specificate all'interno del documento \NdP.
+
+Si noti che è possibile, per esigenze tipografiche, che certe figure siano state posizionate immediatamente dopo l'intera esposizione del caso d'uso. Esse sono comunque rintracciabili dal loro identificatore univoco.
+
 \subsection{UC1: Pagina Iniziale}
 \label{UC1}
 \myimg{UC1 - Pagina Iniziale}
