ar, correzioni ancora minori

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -138,7 +138,7 @@
 All'interno di questa sezione sono elencati i casi d'uso rilevanti per il prodotto \proj{} individuati e definiti attraverso l'analisi del capitolato d'appalto, gli incontri con il proponente e le riunioni interne al team \hx{}. 
 \\La struttura e le convenzioni usate in ogni caso d'uso sono specificate all'interno del documento \NdP.
 
-Si noti che è possibile, per esigenze tipografiche, che certe figure siano state posizionate immediatamente dopo l'intera esposizione del caso d'uso. Esse sono comunque rintracciabili dal loro identificatore univoco.
+Si noti che, per esigenze tipografiche, è possibile che certe figure siano state posizionate immediatamente dopo l'intera esposizione del caso d'uso. Esse sono comunque rintracciabili tramite il loro identificatore univoco.
 
 \subsection{UC1: Pagina Iniziale}
 \label{UC1}
