--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -2,21 +2,15 @@
 % da compilare con il comando pdflatex Analisi_dei_Requisiti_x.x.x.tex
 
 \input{../../util/hx-ambiente}
-\usepackage{hyperref}
-\usepackage{longtable}
-\hypersetup{hidelinks}
 
-\version{0.0.0}
+\version{1.0.0}
 \creaz{19 dicembre 2016}
 \author{\ALL}
 \supervisor{\ALL}
 \uso{esterno}
 \dest{Prof. Tullio Vardanega, Zucchetti S.P.A.}
 \title{Analisi dei Requisiti}
-
-\renewcommand{\arraystretch}{1.5}
-\setcounter{tocdepth}{4}
-\setcounter{secnumdepth}{4}
+\date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
