--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -3350,6 +3350,10 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC4.2.6]{UC4.2.6}\\
 & \hyperref[UC4.2.6.1]{UC4.2.6.1}\\ \hline
 
+\hypertarget{RFO3.2.7}{RFO3.2.7} &\hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.2]{UC4.2}\\
+&\hyperref[UC4.2.7]{UC4.2.7}\\ \hline
+
 \hyperlink{RFO3.3}{RFO3.3} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC4]{UC4}\\
 & \hyperref[UC4.3]{UC4.3}\\ \hline
@@ -4467,7 +4471,7 @@ l'attore visualizza un messaggio d'errore.
 \hline 
 \textbf{Tipo} & \textbf{Obbligatorio} & \textbf{Desiderabile} & \textbf{Facoltativo}\\
 \hline
-Funzionale & 130 & 38 & 0\\ \hline
+Funzionale & 158 & 11 & 0\\ \hline
 Prestazionale & 0 & 0 & 0\\ \hline
 Di Qualità & 8 & 0 & 2\\ \hline
 Di Vincolo & 7 & 2 & 0\\ \hline
